--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,7 +11,7 @@ jobs:
 
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v2
+        uses: mamidi9494/cloudpage.in
 
       - name: Set up AWS credentials
         uses: aws-actions/configure-aws-credentials@v2
