--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Sync to AWS S3
+name: Sync to AWS S3 and Invalidate CloudFront Cache
 
 on:
   push:
@@ -6,7 +6,7 @@ on:
       - main  # Trigger on push to the main branch (update branch name as needed)
 
 jobs:
-  sync_to_s3:
+  sync_to_s3_and_invalidate_cache:
     runs-on: ubuntu-latest
     defaults:
       run:
@@ -19,11 +19,6 @@ jobs:
           token: ${{ secrets.GITHUB_TOKEN }}
           repository: mamidi9494/cloudpage.in
           ref: main
-
-      - name: Install Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: '14'
 
       - name: Set up AWS credentials
         uses: aws-actions/configure-aws-credentials@v2
@@ -42,4 +37,10 @@ jobs:
           aws s3 sync . s3://${{ secrets.AWS_S3_BUCKET }}/ --delete --exclude ".git*"
         env:
           AWS_S3_BUCKET: www.cloudpage.in
-          
+
+      - name: Create CloudFront cache invalidation
+        run: |
+          DISTRIBUTION_ID="${{ secrets.CLOUDFRONT_DISTRIBUTION_ID }}"
+          aws cloudfront create-invalidation --distribution-id $DISTRIBUTION_ID --paths "/*"
+        env:
+          AWS_DEFAULT_REGION: ${{ secrets.AWS_REGION }}
